# ByteMender

./: .gitignore  CMakeLists.txt  README.MD
files/: operationsFunction
scripts/: generateFile.ps1
src/: CMakeLists.txt
src/algorithms/: KmpResult.h  KmpSearcher.h
src/datatypes/: DynArray.h  HeapEntry.h  Patch.cpp  Patch.h  PatchDescriptor.h
src/memory/: Memory.cpp  Memory.h  Scanner.cpp  Scanner.h
src/proxies/: Setup.h  dxgi.h  version.h
src/utils/: Debug.cpp  Debug.h  HexTable.h  Profiler.h  Utils.cpp  Utils.h  utils.cpp  utils.h
test/: BreakpointTests.cpp  CMakeLists.txt  HeapTests.cpp  KmpTests.cpp  MemoryTests.cpp  PatchLoaderTests.cpp  PatternTests.cpp  mainTest.cpp
test/asm/: operationsFunction.nasm  patchableFunctionTestPatch.nasm
